--- a/docs/css/mooc.css
+++ b/docs/css/mooc.css
@@ -33,7 +33,7 @@ details.demo{
   border: 10px solid #0A0;
 }
 
-
+/*
 summary.demo {
   display: block;
   font-family: monospace;
@@ -59,31 +59,26 @@ summary.ex{
     margin: -.5em -.5em 0;
     padding: .5em;
 }
-details>summary,
-details>summary::before,
-details[open]>summary::before
-{
-}
 
-details>summary::before{
+details summary:before{
   content:'[+] ';
 }
 
-/* details[open] >summary::before{ */
-/*   content:'[-] ' */
-/* } */
+details[open] summary:before{
+  content:'[-] '
+}
 
 details[open] {
     padding: .5em;
 }
 
-/* details[open] >summary { */
-/*     border-bottom: 1px solid #aaa; */
-/*     margin-bottom: .5em; */
-/* } */
+details[open] summary {
+    border-bottom: 1px solid #aaa;
+    margin-bottom: .5em;
+}
 details{
   open:open;
-}
+} */
 
 div.exgroup {
   margin-top:.5em;
