--- a/docs/css/mooc.css
+++ b/docs/css/mooc.css
@@ -28,57 +28,17 @@ details {
 details.ex{
   border: 10px solid #F33;
 }
+details.quiz{
+  border: 10px solid #33F;
+}
+details.quiz>summary{
+  background-color: #33f;
+  outline-color: #33F;
+}
 
 details.demo{
   border: 10px solid #0A0;
 }
-
-/*
-summary.demo {
-  display: block;
-  font-family: monospace;
-  font-size: 120%;
-    font-weight: bold;
-    background-color:#0A0;
-    color:white;
-    font-weight: 700;
-    font-size: 140%;
-    margin: -.5em -.5em 0;
-    padding: .5em;
-}
-
-summary.ex{
-  display: block;
-  font-family: monospace;
-  font-size: 120%;
-    font-weight: bold;
-    background-color:#F33;
-    color:white;
-    font-weight: 700;
-    font-size: 140%;
-    margin: -.5em -.5em 0;
-    padding: .5em;
-}
-
-details summary:before{
-  content:'[+] ';
-}
-
-details[open] summary:before{
-  content:'[-] '
-}
-
-details[open] {
-    padding: .5em;
-}
-
-details[open] summary {
-    border-bottom: 1px solid #aaa;
-    margin-bottom: .5em;
-}
-details{
-  open:open;
-} */
 
 div.exgroup {
   margin-top:.5em;
@@ -101,3 +61,26 @@ li:not(:last-child)  p {
   -moz-box-shadow:    3px 5px 5px 6px #ccc;
   box-shadow:         3px 5px 5px 6px #ccc;
 }
+#header .details{border-bottom:1px solid #dddddf;line-height:1.45;padding-top:.25em;padding-bottom:.25em;padding-left:.25em;color:rgba(0,0,0,.6);display:flex;flex-flow:row wrap}
+#header .details span:first-child{margin-left:-.125em}
+#header .details span.email a{color:rgba(0,0,0,.85)}
+#header .details br{display:none}
+#header .details br+span::before{content:"\00a0\2013\00a0"}
+#header .details br+span.author::before{content:"\00a0\22c5\00a0";color:rgba(0,0,0,.85)}
+#header .details br+span#revremark::before{content:"\00a0|\00a0"}
+details,.audioblock,.imageblock,.literalblock,.listingblock,.stemblock,.videoblock{margin-bottom:1.25em}
+details{margin-left:1.25rem}
+/* details>summary{cursor:pointer;display:block;position:relative;line-height:1.6;margin-bottom:.625rem;-webkit-tap-highlight-color:transparent}
+details>summary::before{content:"";border:solid transparent;border-left:solid;border-width:.4em 0 .4em .8em;position:absolute;top:.5em;left:-1.25rem;transform:translateX(15%)}
+details[open]>summary::before{border:solid transparent;border-top:solid;border-width:.8em .4em 0;transform:translateY(15%)}
+details>summary::after{content:"";width:1.25rem;height:1em;position:absolute;top:.3em;left:-1.25rem} */
+details>summary{content: ""; cursor:pointer;background-color: #f33; color:white;font-weight: 800; font-family: sans-serif;outline:10px solid #f33;}
+details>summary::before{content:"";border:solid transparent;border-left:solid;border-width:.4em 0 .4em .8em;position:absolute;top:.5em;left:-1.25rem;transform:translateX(18%)}
+details[open]>summary::before{border:solid transparent;border-top:solid;border-width:.8em .4em 0;transform:translateY(15%)}
+details>summary::after{content: ""}
+
+
+body.book #header .details{border:0!important;display:block;padding:0!important}
+body.book #header .details span:first-child{margin-left:0!important}
+body.book #header .details br{display:block}
+body.book #header .details br+span::before{content:none!important}
